test/tasty/neg/src-2/TestSaferExceptions_fail.scala
package tastytest

object TestSaferExceptions {

  def test = SaferExceptions.safeDiv(1, 0) // error

}
